# SpeziDataPipeline

./: .firebaserc  .gitignore  .yamllint  CONTRIBUTORS.md  README.md  SpeziDataPipeline.ipynb  SpeziDataPipelineTemplate.ipynb  SpeziDataPipelineTemplateForQuestionnaireResponses.ipynb  SpeziDataPipelineTemplateForQuestionnaireResponses.ipynb.license  SpeziDataPipelineTemplateForSurveys.ipynb  Untitled.ipynb  all_questionnaire_responses.csv  commit_7abc6a8_signoff.txt  env  firebase.json  helpers.py  pylintrc  pyproject.toml  requirements.txt  update_authors.py  update_release_version.py
.github/workflows/: build-and-test.yml  monthly-markdown-link-check.yml  monthly-markdown-link-check.yml.yml  publish-to-pypi.yml  pull_request.yml  update-authors.yml
.reuse/: dep5
LICENSES/: MIT.txt
Resources/: PAD Walking Impairment.json  PHQ-9.json
data_access/: firebase_FHIR_data_access.py  firebase_fhir_data_access.py
data_analysis/: data_analyzer.py
data_exploration/: data_explorer.py
data_export/: data_exporter.py
data_flattening/: FHIR_data_flattener.py  fhir_data_flattener.py  fhir_resources_flattener.py
data_processing/: code_mapping.py  data_processor.py  observation_processing.py  observation_processor.py
data_visualization/: data_visualizer.py
sample_data/: 3aX1qRKWQKTRDQZqr5vg5N7yWU12_sample_ecg_data1.json  3aX1qRKWQKTRDQZqr5vg5N7yWU12_sample_ecg_data2.json  5tTYsEWMIKNq4EJEf24suVINGI12_sample_questionnaire_response_data1.json  5tTYsEWMIKNq4EJEf24suVINGI12_sample_questionnaire_response_data2.json  XrftRMc358NndzcRWEQ7P2MxvabZ_sample_data1.json  XrftRMc358NndzcRWEQ7P2MxvabZ_sample_data2.json  firebase-export-metadata.json  overall_export_metadata.json  phq9responses.json  sample_df.csv
sample_data/firestore_export/: firestore_export.overall_export_metadata
sample_data/firestore_export/all_namespaces/all_kinds/: all_namespaces_all_kinds.export_metadata  output-0
sample_data/users/XrftRMc358NndzcRWEQ7P2MxvabZ/: 00a82ffe-a40f-4fab-b14a-ed5b855c1547_step_count_2023-04-26T00-29-25.json  0a773994-a18d-46a1-a8ff-baac4ad59e8f_protein_intake_2023-01-29T17-27-57.json  0aa42c3f-2e66-41d0-a3be-1e27f3d6f37c_step_count_2023-06-28T21-26-38.json  0b78ea1d-7603-444e-b3ce-980026c0e780_protein_intake_2023-09-24T09-27-41.json
sample_data/users/sEmijWpn0vXe1cj60GO5kkjkrdT4/: 0a380710-d940-4e89-acaf-9775038f617c_calorie_intake_2022-12-12T22-58-11.json  0b0fee5d-8483-4094-b2fb-719443c41902_calorie_intake_2023-04-14T07-46-01.json  0bedf1f3-05bd-495c-b970-7498b8a03bd6_step_count_2023-03-10T23-20-29.json
scripts/: update_version.py
src/spezi_data_pipeline/data_access/: firebase_fhir_data_access.py
src/spezi_data_pipeline/data_exploration/: data_explorer.py  questionnaire_explorer.py
src/spezi_data_pipeline/data_export/: data_exporter.py
src/spezi_data_pipeline/data_flattening/: fhir_resources_flattener.py
src/spezi_data_pipeline/data_processing/: code_mapping.py  data_processor.py  observation_processor.py  questionnaire_processor.py
tests/: test_data_access.py  test_data_exploration.py  test_data_export.py  test_data_flattening.py  test_data_process.py  test_data_visualization.py  test_update_configuration_file.py
utils/: helpers.py
