[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spezi_data_pipeline"
version = "0.1.0"
description = "A comprehensive data pipeline for processing and analyzing FHIR data using Firebase and FHIR standards."
authors = [
    { name = "Vasiliki Bikia", email = "bikia@stanford.edu" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "firebase-admin>=5.0.0",
    "fhir.resources>=6.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "coverage",
    "pytest-cov>=2.10.0"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
