[build-system]
requires = [
    "hatchling",
    "setuptools>=42",
    "wheel"
]
build-backend = "hatchling.build"

[project]
name = "spezi_data_pipeline"
dynamic = ["version"]
description = "A comprehensive data pipeline for accessing, downloading, restructuring, processing, and exporting FHIR-compatible health data from cloud storage platforms including Google Firebase."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "firebase-admin>=5.0.0",
    "fhir.resources>=6.0.0"
]
[[project.authors]]
name = "Vicky Bikia"

[[project.authors]]
name = "Paul Schmiedmayer"

[[project.authors]]
name = "Adrit Rao"

[[project.authors]]
name = "Oliver Aalami"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "coverage",
    "pytest-cov>=2.10.0"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.hatch.version]
path = "pyproject.toml"

[tool.hatch.metadata]
version = "0.0.0"  # The version is automatically updated by the update_version.py script
